verbatim etc. converted to DocBook.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10263 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -1,2 +1,10 @@
 body { font-family: sans-serif; }
 code.literal { background-color: #f0f0f0; }
+
+pre.screen {
+  border: 1px solid #aaaaaa;
+  background-color: #f9f9f9;
+  padding: 0.3em;
+}
+
+span.underline {text-decoration: underline;}
