Tests with making underline in <screen> better, but commented out.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10268 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -7,4 +7,14 @@ pre.screen {
   padding: 0.3em;
 }
 
-span.underline {text-decoration: underline;}
+span.underline { text-decoration: underline; }
+
+/* Tests with making underline in <screen> better:
+pre.screen span.underline {
+  display: block;
+  width: 90%;
+  border-bottom: thin solid black;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+*/
