Make italic inside bold work for our example text.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10272 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -9,6 +9,9 @@ pre.screen {
 
 span.underline { text-decoration: underline; }
 
+/* Make <phrase role="italic"> render as italic */
+span.italic { font-style: italic; }
+
 /* Tests with making underline in <screen> better:
 pre.screen span.underline {
   display: block;
