Better volumetric fog figure.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10275 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -21,3 +21,6 @@ pre.screen span.underline {
   padding-bottom: 0px;
 }
 */
+
+/* To make fog figures look good, otherwise the text stretches them too much. */
+div.figure-contents table td { max-width: 400px; vertical-align: top; }
