Make space between callouts smaller in html.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10330 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -48,3 +48,8 @@ div.figure {
 
 /* fo_vertical_space should not appear in HTML. */
 p.fo_vertical_space { display: none; }
+
+/* make space between callouts smaller */
+div.calloutlist p {
+  margin-bottom: 0em; margin-top: 1em;
+}
