Make <abbrev> in bibliography bold, to be more visible.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10361 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -53,3 +53,7 @@ p.fo_vertical_space { display: none; }
 div.calloutlist p {
   margin-bottom: 0em; margin-top: 1em;
 }
+
+/* Make <abbrev> for bibliography bold, to be easier to find in long references
+   list*/
+abbr.abbrev { font-weight: bold; }
