Customize HTML titlepage, to look quite similar to PDF, with out logo image etc.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10421 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -53,3 +53,12 @@ p.fo_vertical_space { display: none; }
 div.calloutlist p {
   margin-bottom: 0em; margin-top: 1em;
 }
+
+/* Center titlepage (inside parent, and center text inside) */
+div.book-titlepage {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  text-align: center;
+  border: thin solid black;
+}
