Better css for copyright/legalnotice in html (some horiz padding, and smaller font).
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@10425 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders_doc/compositing_shaders_doc.css
+++ b/compositing_shaders_doc/compositing_shaders_doc.css
@@ -61,4 +61,9 @@ div.book-titlepage {
   width: 80%;
   text-align: center;
   border: thin solid black;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
+
+p.copyright { font-size: small; }
+div.legalnotice { font-size: small; }
